--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.5",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "pdfkit": "^0.14.0",
