--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -20,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.7.0",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
     "graphql-playground-middleware-express": "^1.7.23",
@@ -33,6 +35,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "pdfkit": "^0.14.0",
+    "qrcode": "^1.5.3",
     "randomstring": "^1.3.0",
     "slugify": "^1.6.6",
     "stripe": "^14.16.0"
