--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "qrcode": "^1.5.3",
     "randomstring": "^1.3.0",
     "slugify": "^1.6.6",
-    "stripe": "^14.16.0"
+    "stripe": "^14.16.0",
+    "winston": "^3.12.0"
   }
 }
