--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "randomstring": "^1.3.0",
     "slugify": "^1.6.6",
     "stripe": "^14.16.0",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.12.0"
   }
 }
